--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -26,7 +26,7 @@
           href: sql-database-managed-instance-get-started.md
     - name: Konfigurera
       items:
-        - name: Brandväggsregler för IP-adress på servernivå
+        - name: IP-brandväggsregler på servernivå
           href: sql-database-server-level-firewall-rule.md
         - name: VM-klientanslutning till en hanterad instans
           href: sql-database-managed-instance-configure-vm.md
@@ -112,7 +112,7 @@
       href: sql-database-resource-manager-samples.md
 - name: Begrepp
   items:
-    - name: Inköpsmodeller
+    - name: Köpmodeller
       items:
         - name: Översikt
           href: sql-database-purchase-models.md
@@ -128,6 +128,7 @@
       items:
         - name: Översikt
           href: sql-database-service-tiers-general-purpose-business-critical.md
+          displayName: provisioned compute tier
         - name: Tjänstnivåerna Generell användning/Standard
           href: sql-database-service-tier-general-purpose.md
         - name: Tjänstnivåerna Affärskritisk/Premium
@@ -245,7 +246,7 @@
               href: sql-vulnerability-assessment.md
             - name: Advanced Threat Protection
               href: sql-database-threat-detection-overview.md
-        - name: Brandväggsregler för IP-adress på servernivå
+        - name: IP-brandväggsregler på servernivå
           items:
             - name: Skapa och hantera
               href: sql-database-firewall-configure.md
