--- a/articles/ansible/index.yml
+++ b/articles/ansible/index.yml
@@ -1,70 +1,64 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ca77662e7756d74f8f939e78af626b7f2da2a3c4
-ms.sourcegitcommit: d89b679d20ad45d224fd7d010496c52345f10c96
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/12/2019
-ms.locfileid: "57792726"
 documentType: LandingData
 title: Dokumentation om Ansible på Azure
 metadata:
-  title: Dokumentation om Ansible på Azure – självstudier, exempel, referenser och resurser
-  description: Lär dig använda Ansible för att automatisera etablering i molnet, konfigurationshantering och programdistribution.
+  title: 'Dokumentation om Ansible på Azure – självstudier, exempel, referenser och resurser'
+  description: 'Lär dig använda Ansible för att automatisera etablering i molnet, konfigurationshantering och programdistribution.'
   ms.service: azure
-  keywords: ansible, azure, devops, tutorials, samples, reference
+  keywords: 'ansible, azure, devops, tutorials, samples, reference'
   author: tomarchermsft
   manager: jeconnoc
   ms.author: tarcher
   ms.topic: landing-page
-  ms.date: 08/27/2018
+  ms.date: 04/22/2019
 abstract:
-  description: Använd <a href="https://www.ansible.com">Ansible</a> för att automatisera etablering i molnet, konfigurationshantering och programdistribution.
+  description: 'Använd <a href="https://www.ansible.com">Ansible</a> för att automatisera etablering i molnet, konfigurationshantering och programdistribution.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Installera Ansible och använda det för att skapa och hantera virtuella Linux-datorer i Azure.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /azure/media/index/azure_dev-9.svg
-      text: Installera Ansible
-      href: /azure/virtual-machines/linux/ansible-install-configure?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
-    - image:
-        src: /azure/media/index/VirtualMachine.svg
-      text: Skapa en virtuell Linux-dator
-      href: /azure/virtual-machines/linux/ansible-create-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
-    - image:
-        src: /azure/media/index/VirtualMachine.svg
-      text: Hantera en virtuell Linux-dator
-      href: /azure/virtual-machines/linux/ansible-manage-linux-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig använda Ansible för att skapa och hantera infrastruktur för beräkning, nätverk och lagring i Azure.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Installera Ansible och använda det för att skapa och hantera virtuella Linux-datorer i Azure.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/media/index/azure_dev-9.svg
+            text: Installera Ansible
+            href: /azure/virtual-machines/linux/ansible-install-configure?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
+          - image:
+              src: /azure/media/index/VirtualMachine.svg
+            text: Konfigurera en virtuell Linux-dator
+            href: /azure/virtual-machines/linux/ansible-create-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
+          - image:
+              src: /azure/media/index/VirtualMachine.svg
+            text: Hantera en virtuell Linux-dator
+            href: /azure/virtual-machines/linux/ansible-manage-linux-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/virtual-machines/linux/ansible-create-complete-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json">Skapa en virtuell Linux-dator, inklusive ett virtuellt nätverk, en offentlig IP-adress och ett virtuellt nätverkskort.</a>
-    - html: <a href="./ansible-run-playbook-in-cloudshell">Köra Ansible med Bash i Azure Cloud Shell.</a>
-    - html: <a href="./ansible-manage-azure-dynamic-inventories">Skapa och hantera ett dynamisk lager för dina Azure-resurser.</a>
-    - html: <a href="./ansible-create-configure-vmss">Skapa och hantera skalningsuppsättningar för virtuella datorer i Azure.</a>
-    - html: <a href="./ansible-deploy-app-vmss">Distribuera program till skalningsuppsättningar för virtuella datorer i Azure.</a>
-    - html: <a href="./ansible-create-configure-aks">Skapa och hantera Azure Kubernetes Service-kluster.</a>
-    - html: <a href="./ansible-create-configure-application-gateway">Hantera webbtrafik med en Azure Application Gateway.</a>
-    - html: <a href="./ansible-auto-scale-vmss">Skala en VM-skalningsuppsättning automatiskt i Azure med Ansible.</a>
-    - html: <a href="./ansible-scale-azure-web-apps">Skala Azure App Service-webbappar med Ansible.</a>
-    - html: <a href="./ansible-create-configure-route-table">Skapa, ändra eller ta bort en Azure-routningstabell med Ansible.</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Lär dig använda Ansible för att skapa och hantera infrastruktur för beräkning, nätverk och lagring i Azure.'
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="/azure/virtual-machines/linux/ansible-create-complete-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json">Skapa en virtuell Linux-dator, inklusive ett virtuellt nätverk, en offentlig IP-adress och ett virtuellt nätverkskort.</a>'
+          - html: <a href="./ansible-run-playbook-in-cloudshell">Köra Ansible med Bash i Azure Cloud Shell.</a>
+          - html: <a href="./ansible-manage-azure-dynamic-inventories">Skapa och hantera ett dynamisk lager för dina Azure-resurser.</a>
+          - html: <a href="./ansible-create-configure-vmss">Skapa och hantera skalningsuppsättningar för virtuella datorer i Azure.</a>
+          - html: <a href="./ansible-deploy-app-vmss">Distribuera program till skalningsuppsättningar för virtuella datorer i Azure.</a>
+          - html: <a href="./ansible-create-configure-aks">Skapa och hantera Azure Kubernetes Service-kluster.</a>
+          - html: <a href="./ansible-create-configure-application-gateway">Hantera webbtrafik med en Azure Application Gateway.</a>
+          - html: <a href="./ansible-auto-scale-vmss">Skala skalningsuppsättningar för virtuella datorer automatiskt i Azure med Ansible.</a>
+          - html: <a href="./ansible-scale-azure-web-apps">Skala Azure App Service-webbappar med Ansible.</a>
+          - html: '<a href="./ansible-create-configure-route-table">Skapa, ändra eller ta bort en Azure-routningstabell med Ansible.</a>'
+  - title: Referens
     items:
-    - title: Spelboksroller
-      html: <p><a href="https://galaxy.ansible.com/Azure/azure_preview_modules/">azure_preview_module</a></p>
-    - title: Versioner och funktioner
-      html: <p><a href="./ansible-matrix.md">Funktionsmatris för moduler och roller</a></p>
-    - title: Verktyg
-      html: <p><a href="https://marketplace.visualstudio.com/items?itemName=vscoss.vscode-ansible">Visual Studio Code-tillägg för Ansible</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Spelboksroller
+            html: '<p><a href="https://galaxy.ansible.com/Azure/azure_preview_modules/">azure_preview_module</a></p>'
+          - title: Versioner och funktioner
+            html: <p><a href="./ansible-matrix.md">Funktionsmatris för moduler och roller</a></p>
+          - title: Verktyg
+            html: '<p><a href="https://marketplace.visualstudio.com/items?itemName=vscoss.vscode-ansible">Visual Studio Code-tillägg för Ansible</a></p>'
