--- a/articles/service-bus-relay/TOC.yml
+++ b/articles/service-bus-relay/TOC.yml
@@ -36,6 +36,8 @@
       href: relay-authentication-and-authorization.md
     - name: Hybridanslutningsprotokoll
       href: relay-hybrid-connections-protocol.md
+    - name: Vanliga säkerhetsattribut i Azure
+      href: service-bus-relay-security-attributes.md
 - name: Gör så här för att
   items:
     - name: Planera och designa
