--- a/articles/virtual-network/index.yml
+++ b/articles/virtual-network/index.yml
@@ -6,14 +6,14 @@ metadata:
   title: 'Dokumentation om Virtual Network – Självstudier, snabbstarter, API-referenser | Microsoft Docs'
   meta.description: 'Learn how to use Azure Virtual Network. Quickstarts, tutorials, samples, and more, show you how to deploy a virtual network, control traffic filtering and routing, and connect a virtual network to other virtual networks.'
   services: virtual-network
-  author: jdial
-  manager: jeconnoc
+  author: KumudD
+  manager: twooley
   ms.service: virtual-network
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 03/23/2018
-  ms.author: jdial
+  ms.author: kumud
 abstract:
   description: 'Lär dig hur du använder Azure Virtual Network. Våra snabbstarter, självstudier och exempel med mera visar dig hur du distribuerar ett virtuellt nätverk, styr trafikfiltrering och routning samt ansluter ett virtuellt nätverk till andra virtuella nätverk.'
 sections:
